made route changes in the index

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 </a>
             </li>
             <li>
-                <a href="../togglesidebar/pages/dashboard.html">
+                <a href="pages/dashboard.html">
                     <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px"
                         fill="#5f6368">
                         <path
@@ -86,7 +86,7 @@
                 </ul>
             </li>
             <li>
-                <a href="../togglesidebar/pages/calender.html">
+                <a href="pages/calender.html">
                     <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px"
                         fill="#5f6368">
                         <path
@@ -96,7 +96,7 @@
                 </a>
             </li>
             <li>
-                <a href="../togglesidebar/pages/profile.html">
+                <a href="pages/profile.html">
                     <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px"
                         fill="#5f6368">
                         <path
